# syni-kotlin

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build.gradle  gradle.properties  gradlew  gradlew.bat  settings.gradle
.github/: dependabot.yml
.github/workflows/: ci.yml  close-external-prs.yml  release.yml
syni/: build.gradle
syni-sdk/: build.gradle  consumer-rules.pro  proguard-rules.pro
syni-sdk/src/main/: AndroidManifest.xml
syni-sdk/src/main/cpp/: CMakeLists.txt  syni_jni.c
syni-sdk/src/main/jniLibs/: README.md
syni-sdk/src/main/kotlin/ai/synheart/syni/: SyniAgent.kt  SyniChat.kt  SyniCloudClient.kt  SyniCloudConfig.kt  SyniInstallState.kt  SyniInstaller.kt  SyniModelCatalog.kt  SyniModelSpec.kt  SyniPersona.kt  SyniSpecPersona.kt
syni-sdk/src/main/kotlin/ai/synheart/syni/runtime/: SyniNative.kt  SyniRuntime.kt
syni-sdk/src/main/kotlin/com/syni/sdk/: Syni.kt
syni-sdk/src/main/kotlin/com/syni/sdk/budget/: BudgetEnforcer.kt
syni-sdk/src/main/kotlin/com/syni/sdk/cloud/: CloudClient.kt
syni-sdk/src/main/kotlin/com/syni/sdk/core/: Persona.kt  SyniConfig.kt  SyniError.kt  SyniRequest.kt  SyniResponse.kt
syni-sdk/src/main/kotlin/com/syni/sdk/engine/: EngineAdapter.kt  EngineManager.kt  LocalEngine.kt  PortableLocalEngine.kt  SyniNative.kt
syni-sdk/src/main/kotlin/com/syni/sdk/keyboard/: KeyboardBridge.kt  SyniContentProvider.kt
syni-sdk/src/main/kotlin/com/syni/sdk/model/: ModelManager.kt
syni-sdk/src/test/kotlin/ai/synheart/syni/: SyniChatResponseTest.kt  SyniInstallStateTest.kt  SyniSpecPersonaTest.kt
syni-sdk/src/test/kotlin/com/syni/sdk/: BudgetEnforcerTest.kt  PersonaRouterTest.kt  SchemaValidatorTest.kt  SyniRequestTest.kt
syni/src/main/kotlin/ai/synheart/syni/: SyniAgent.kt  SyniCloudClient.kt  SyniCloudConfig.kt  SyniModelCatalog.kt
syni/src/test/kotlin/ai/synheart/syni/: SyniAgentParityTest.kt  SyniModelCatalogTest.kt
(+3 files in other folders)
